# openclaw-odoo-bridge

./: .env.example  .gitignore  Makefile  README.md  openclaw-odoo-bridge.service  pyproject.toml
.claude/: settings.json
src/openclaw_odoo_bridge/: __main__.py  bridge.py  config.py  odoo_client.py  openclaw_client.py
tests/: test_bridge.py  test_config.py  test_odoo_client.py  test_openclaw_client.py
